--- a/build.xml
+++ b/build.xml
@@ -5,7 +5,8 @@
    <path id="classpath.base"/>
    <path id="classpath.test">
       <pathelement location="${testdir}" />
-      <pathelement location="${srcdir}" />
+      <pathelement location="${testdir}/junit-4.11.jar" />
+      <pathelement location="${testdir}/hamcrest-core-1.3.jar" />
       <path refid="classpath.base" />
    </path>
    <target name="clean" >
